--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FF9000" />
+    <link rel="shortcut icon" href="male-hair-of-head-and-face-shapes.ico" />
 
     <title>GoBarber</title>
 
